fix text width and alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: azure;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo-title-container {
@@ -74,4 +77,12 @@ img {
   padding-left: 5px;
   font-size: 16px;
   font-family: fantasy;
+}
+
+p,
+h2 {
+  max-width: 800px;
+}
+p {
+  text-align: justify;
 }
